# idk-what-name

./: .gitignore  LICENSE.txt  OLD.txt  Plan.md  README.md  hello  moores_hood.c  new.txt  noise.c  q  reading_writing.c  text.txt
AOC2023/: a.out  day2.cpp
AOC2023/cairo/: day1AOC.py
SDL/: #map_gen.cpp#  #sandy_water.cpp#  #under_pressure_dododo.cpp#  .#sandy_water.cpp  Makefile  a.out  basic_text.cpp  birds.c  boiler.cpp  cellular-automata.cpp  draw  draw.cpp  draw2  eqaulize.cpp  fire_physics_jajaja.cpp  fixed_pos.cpp  hello.txt  im_on_fire.cpp  im_on_fire.cpp~  map_gen.cpp  map_gen.cpp~  montreal_style_smoked_bacon.cpp  montreal_style_smoked_meat.cpp  multi-threading.txt  multi-threading.txt~  multi_array_test.cpp  new_render_method.cpp  not_fixed.cpp  rand.cpp  readPPMFile.c  readRawFile.cpp  sand.cpp  sandy.cpp  sandy_water.cpp  sandy_water2.cpp  story_of_my_life.cpp  test.cpp  text.txt  threading_test.cpp  under_pressure_dododo.cpp  (+4 more)
SDL/jeux-video/: !  .fuse_hidden0000d57700000005  .fuse_hidden0003572500000006  .fuse_hidden000357e700000007  .gitignore  CMakeLists.txt  Game.cpp  Makefile  base_data.hpp  base_data.hpp.gch  draw2  init_funcs.hpp  input.hpp  input_large.hpp  insanity.sh  main.cpp  massif.out.61717  physics.hpp  plan.html  plan.org  plan.txt  rand_testing.hpp  render.hpp  tester  tester.cpp  text.txt  txt.txt
SDL/jeux-video/debug/: debug.hpp  printing.hpp
SDL/jeux-video/docs/: Style.org
SDL/jeux-video/generation/: terain.hpp
SDL/jeux-video/input/: input_large.hpp  keyboard.hpp
SDL/jeux-video/jeux-video/testData/: testSave.pcsf  testSave0
SDL/jeux-video/math/: vector_math.hpp
SDL/jeux-video/physics/: entity.hpp  entity_compnents.cpp  entity_types.hpp  physics.hpp  physics2.hpp
SDL/jeux-video/render/: Compute.cpp  EBO.cpp  EBO.h  EBO.hpp  FBO.cpp  FBshader.cpp  FrameBufferTex.cpp  MVPMatrix.hpp  Scene.cpp  Shader_class.cpp  VAO.cpp  VAO.h  VAO.hpp  VBO.cpp  VBO.h  VBO.hpp  render.hpp  shader.cpp  shader_class.h  texture.cpp  texture.h  texture.hpp  ui.hpp
SDL/jeux-video/render/shaders/: FBfrag.glsl  FBvert.glsl  compute.glsl  frag.glsl  test_fs.glsl  test_vs.glsl  vert.glsl
SDL/jeux-video/start/: Game.cpp  base_data.hpp  update_funcs.hpp
SDL/jeux-video/testData/: imageLoad.ppm  imageLoead.ppm  testSave.pcsf  testScene.pcsf
SDL/jeux-video/ui/: render.hpp  text_test.c  ui.hpp
SDL/jeux-video/ui/font/: Source.txt
SDL/opengl_migration/: CMakeCache.txt  Makefile  cmake_install.cmake  glad.c  main.cpp  tri
cellular-automata/: moores_hood.c
drunk-walker/: DrunkWalker.py  drunk.c
jeux-video/: CMakeLists.txt  README.md  build.sh  sanity.sh  tests.sh
jeux-video/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
jeux-video/include/glad/: glad.c  glad.h
jeux-video/plan/: plan.org  plan.org_archive
jeux-video/src/: chlorineClasses.hpp  main.cpp
jeux-video/src/chlorine/: CMakeLists.txt
jeux-video/src/chlorine/io/: io.cpp  io.hpp
jeux-video/src/chlorine/logs/: logs.cpp  logs.hpp
jeux-video/src/chlorine/network/: net.hpp
jeux-video/src/chlorine/scene/: Event.hpp   EventManager.cpp  EventManager.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp  Types.hpp  component.hpp  componentManager.cpp  componentManager.hpp  scene.cpp  scene.hpp
jeux-video/src/chlorine/utils/: strings.cpp  strings.hpp
jeux-video/src/io/: io.cpp  io.hpp
jeux-video/src/logs/: logs.cpp  logs.hpp
jeux-video/src/poison/: poison.hpp
jeux-video/src/scene/: scene.hpp
jeux-video/test/: Arrowhead.pcsf  boxes  timeSpent.pcsf  world.pcsf
jeux-video/test/Arrowhead/: box.pccf  myBox1.pccf  ray.pccf  windowX.pccf
jeux-video/test/timeSpent/: myBox1.pccf  windowY.pccf
path_finding/: .Binary.in.kate-swp  .leaderBoid.cpp.swp  .leaderMazeAStar.cpp.swp  .leaderPathFinding.cpp.swp  .pathFinding.sh.swp  .testing.sh.swp  .~lock.aStar.txt#  2leaderMazeAStar.cpp  2leaderPathFinding.cpp  2testing.sh  BFS.cpp  BFSmap.cpp  BoidsTest.cpp  Makefile  SteinerTree  a.out  aStar.txt  aStart.cpp  bob.txt  boba.cpp  boids.cpp  coreDump.zst  determinate_2x2.cpp  draw2  draw3  draw4  ell.cpp  fluidBoid.cpp  leaderBoid.cpp  leaderMazeAStar.cpp  leaderPathFinding.cpp  padd.cpp  parition.cpp  pathFinding.sh  plan.org  tea.cpp  temp.txt  tempPair.cpp  testing.sh  time.txt
path_finding/data/: .~lock.aStarData.txt#  10LeadersPath.txt  2LeadersPath.txt  5Boids1000Leader.txt  5Boids100Leader.txt  5Boids10Leader.txt  5Boids200Leader.txt  5Boids20Leader.txt  5Boids2Leader.txt  5Boids400Leader.txt  5Boids40Leader.txt  5LeaderPath.txt  AStar10.txt  AStar100.txt  AStar1000.txt  AStar10000.txt  AStar200.txt  AStar2000.txt  AStar50.txt  AStar500.txt  AStar5000.txt  aStarData.txt  aStarData2.txt  cleanAStar.txt  cleanData.java  cleanLeader2.txt  leaderPath.txt  pathLeader.txt
path_finding/randomStuff/: BFSmap.hpp  DrawMap.cpp  boidsClass.hpp
path_finding/sycl/: CMakeCache.txt  CMakeLists.txt  Makefile  bufferAccessor.cpp  compile_commands.json  compile_flags.txt  cpuSelectorSycl.cpp  dataCopySycl.cpp  debug.txt  explicitMemory.cpp  gravity.cpp  helloSycl.cpp  implicitMemory.cpp  plus_one.cpp  syclTemp.cpp
path_finding/sycl/gaussian/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  draw2  getImg  getImg.cpp  loadImg.cpp  webcam_output.jpeg.xmp
randomAlgos/: ecs.cpp
randomAlgos/AOC2023/: day1.cpp  day1.py
randomAlgos/Diffusion-limited/: diffuse-limit-aggregation.c
randomAlgos/arena/: Makefile
raylith/: CMakeLists.txt  README.md
raylith/src/: aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  rtweekend.h  shader.vert  sphere.h  vec3.h
siracha/: build.sh  virt.dts
testing/: 10_bit_int_test.cpp  64BitTimer.c  Assembler.cpp  IAmath.bib  IAmath.run.xml  IAmath.tex  IAmath.toc  Main.java  Makefile  a.out  devil.cpp  funeral.cpp  glacier.cpp  jesse.cpp  lib.bib  lu.cpp  meth.c  mightListen.cpp  monte.cpp  myTextFile.txt  names.cpp  openFile.cpp  physicsIA.aux  physicsIA.tex  physicsIA.toc  solver  souro.cpp  temp.cpp  temp.run.xml  temp.tex  wonderland.aux  wonderland.tex
voroni/: placing.c
(+199 files in other folders)
